<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Planning poker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="zero">0</string>
    <string name="half">½</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="eight">8</string>
    <string name="thirteen">13</string>
    <string name="twenty">20</string>
    <string name="forty">40</string>
    <string name="hundred">100</string>
    <string name="infinity">∞</string>
    <string name="question">\?</string>
    <string name="pause">❚❚</string>
    <string name="cross">✘</string>

</resources>
