<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".PlanningPokerDeck">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tableLayout"
        android:visibility="visible">
        <TableRow
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent">
            <Button android:text="@string/zero"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonZero"
                android:textSize="40sp" />
            <Button android:text="@string/half"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonHalf"
                android:textSize="40sp" />
            <Button android:text="@string/one"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonOne"
                android:textSize="40sp" />
            <Button android:text="@string/two"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonTwo"
                android:textSize="40sp" />
        </TableRow>
        <TableRow
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent">
            <Button android:text="@string/three"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonThree"
                android:textSize="40sp" />
            <Button android:text="@string/five"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonFive"
                android:textSize="40sp" />
            <Button android:text="@string/eight"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonEight"
                android:textSize="40sp" />
            <Button android:text="@string/thirteen"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonThirteen"
                android:textSize="40sp" />
        </TableRow>
        <TableRow
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent">
            <Button android:text="@string/twenty"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonTwenty"
                android:textSize="40sp" />
            <Button android:text="@string/forty"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonForty"
                android:textSize="40sp" />
            <Button android:text="@string/hundred"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonHundred"
                android:textSize="40sp" />
            <Button android:text="@string/infinity"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonInfinity"
                android:textSize="40sp" />
        </TableRow>
        <TableRow
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent">
            <Button android:text="@string/question"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonQuestion"
                android:textSize="40sp" />
            <Button android:text="@string/pause"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonPause"
                android:textSize="40sp" />
            <Button android:text="@string/cross"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:clickable="true"
                android:enabled="true"
                android:id="@+id/buttonCross"
                android:textSize="40sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/buttonMain"
        android:visibility="invisible"
        android:background="#FFFFFFFF"
        android:textSize="200sp" />
</RelativeLayout>
